data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2199.wast
;; 9. **Test 9: `br_table` with Mixed Forward and Backward Labels**    - Description: Include a mix of forward and backward labels in a `br_table` vector within a loop to observe branching behavior.    - Specific Constraint: Ensure mixed label handling is correctly performed within the structured control flow.    - Infinite Loop Relation: Incorrect handling of mixed labels might lead to unexpected loop re-entries causing infinite iterations.

(assert_invalid
  (module 
    (func $mixed-labels-loop
      (loop $loop
        (block $exit (br_table $exit $loop $exit (i32.const 1)))
      )
    )
  )
  "type mismatch"
)